@@ -1,3 +1,13 @@
+2004-10-26  John ffitch  <jpff@codemist.co.uk>
+
+	* OOps/ugrw1.c: Simplified some of the error reporting
+
+	* H/ugrw1.h (zkwm): and remove value from domix
+
+2004-10-25  John ffitch  <jpff@codemist.co.uk>
+
+	* OOps/ugens6.c (cmbset): Round rather than truncate
+
 2004-10-24  Michael Gogins <gogins@pipeline.com>
 
 	* Updated build system for gcc 3.4.2 (candidate), changed some
